prometheus/statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: "prometheus"
  replicas: 1
  selector:
    matchLabels:
      app: prometheus 
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.19.2
        ports:
        - containerPort: 9090
          name: prometheus
        volumeMounts:
        - name: pvc-prometheus
          mountPath: /prometheus 
        - name: config-volume
          mountPath: /etc/prometheus  

      serviceAccount: prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
  volumeClaimTemplates:
  - metadata:
      name: pvc-prometheus
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
